есть, наверное, ошибки, но я уже так распечатаю

--- a/dmath.tex
+++ b/dmath.tex
@@ -1053,33 +1053,144 @@ $\blacksquare$
 \noindent
 $\blacksquare$
 
-\parag{12. Если G — минимально связный граф (удаление любого ребра приводит к несвязности), то G не содержит простых циклов длины больше двух}
-Пусть A = (удаление любого ребра G приводит к несвязности), B = ( G не содержит простых циклов длины больше двух). Тогда доказать $A \rightarrow B$ есть то же самое, что доказать $\bar B \rightarrow \bar A$ (по принципу контрапозиции). Докажем $\bar B \rightarrow \bar A$.
+\parag{12. 13. 14. Я не знаю, как это ддоказывать по отдельности. Они еще напихали только те переходы, которых нет в книжке, это было спланировано. Поэтому буду пытаться, если что, доказывать эквивалентность всего.}
+\textbf{Теорема:} Все четыре указанных свойства равносильны: граф, обладающий одним из них, обладает и всеми остальными
 
-\noindent
-\textbf{Теорема:} Если G содержит простой цикл длины больше двух, то G - не минимально связный граф.
+1) Cвязный граф, где нельзя удалить ни одного ребра без нарушения связности.
 
-\noindent
-===========Coming soon=============
+2) Cвязный граф, где число рёбер на единицу меньше числа вершин.
 
-\parag{13.}
-===========Coming soon=============
+3) Cвязный граф, где для любых двух вершин u, v существует единственный простой путь из u в v.
 
-\parag{14.}
-===========Coming soon=============
-
-\parag{15.}
-===========Coming soon=============
-
-\parag{16.}
-===========Coming soon=============
-
-\parag{17.Критерий обратимости остатка (вычета) по модулю N.}
-\textbf{Теорема:} Число $a$ обратимо по модулю $p$ тогда и только тогда, когда $a$ и $p$ взаимно просты, а именно наибольший общий делитель $a$ и $p$ равен единице.
+4) Cвязный граф, где нет простых циклов длины больше 2.
 
 \noindent
 \textit{Доказательство:}
 
+\noindent
+$(2) \Rightarrow (1)$. Если в графе число рёбер на единицу меньше числа вершин, то после удаления ребра их будет на 2 меньше, а мы уже знаем, что в этом случае связность нарушится.
+
+\noindent
+$(1) \Rightarrow (2)$. Пусть дан связный граф с n вершинами, в котором ни одного ребра нельзя удалить без нарушения связности. Как мы доказывали, что в нём не меньше n-1 рёбер? Мы представляли себе, что рёбра добавляются по очереди, и смотрели, как меняется число связных компонент. Если добавленное ребро соединяло вершины, которые уже и так связаны, число компонент не менялось; в противном случае оно уменьшалось на единицу. Теперь первый случай невозможен: в нём добавленное ребро соединяет то, что соединено и так (другими рёбрами), поэтому оно лишнее и в окончательном графе (его можно удалить без нарушения связности, вопреки предположению). Поэтому к моменту, когда останется одна компонента, было добавлено как раз V - 1 рёбер, где V - число вершин.
+
+\noindent
+Итак, (1) и (2) равносильны. Теперь докажем, что из этих свойств следует (3), то есть единственность простых путей. Здесь снова нужно будет смотреть за процессом добавления рёбер - мы знаем, что добавляемое ребро всегда соединяет две разные компоненты - и по индукции доказывать, что нет двух простых путей с одинаковыми началом и концом.
+
+\noindent
+Итак, предположим, что это свойство выполнено для графа из нескольких связных компонент, и мы добавляем туда ребро p–q, соединяя две различные компоненты P и Q (содержащие p и q соответственно). Нам надо доказать, что и для нового графа это свойство выполнено. Пусть это не так, и есть два простых пути с одинаковым началом u и одинаковым концом v. Как минимум один из этих путей должен включать новое ребро p–q, поскольку до его добавления свойство единственности выполнялось (предположение индукции). Ребро это может входить только один раз, поскольку путь простой. Значит, начало пути лежит в одной из компонент P или Q, а конец в другой (остальные рёбра старые и не переводят в другую компоненту). Пусть, например, u лежит в P, а v лежит в Q. Тогда путь состоит из трёх частей: простой путь от u до p, ребро p–q, и простой путь от v до q. Посмотрим теперь на другой путь из u в v и убедимся, что он совпадает с первым. Он тоже должен использовать ребро p–q, поскольку перед добавлением этого ребра вершины u и v лежали в разных компонентах. Тогда по тем же причинам он разбивается на часть от u до p, ребро p–q, и часть от q до v. Остаётся воспользоваться предположением индукции (единственность пути в старом графе от u до p, и от q до v) и увидеть, что два рассматриваемых пути совпадают.
+
+\noindent
+Из (3) легко следует (4). В самом деле, если есть простой цикл $a_{1} \leftrightarrow a_{2} \leftrightarrow ...  a_{n} \leftrightarrow a_{1}$, где n > 2 и все $a_{1}, ..., a_{n}$ различны, то есть два простых пути из $a_{1}$ в $a_{n}$, а именно путь $a_{1} \leftrightarrow a_{2} \leftrightarrow ... \leftrightarrow a_{n}$ и путь из одного ребра $a_{1} \leftrightarrow a_{n}$.
+
+\noindent
+Наконец, надо убедиться, что из (4) следует (1) и (2). Снова нужно вспомнить процесс слияния компонент при добавлении рёбер. Если (1) и (2) неверны, то в какой-то момент добавляется ребро, соединяющее уже связанные друг с другом вершины. Эти вершины связаны простым путём (как мы доказали), и вместе с добавленным ребром получится цикл. При этом длина цикла по крайней мере 3, потому что имевшийся простой путь был с пересадками (ребра-то раньше не было).
+
+\noindent
+Теорема об эквивалентности четырёх свойств доказана
+
+\noindent
+$\blacksquare$
+
+\parag{15. Равносильность свойств ориентированных графов: (1) каждая компонента сильной связности со- стоит из одной вершины; (2) вершины графа возможно занумеровать так, чтобы каждое ребро вело из вершины с меньшим номером в вершину с большим номером; (3) в графе нет циклов длины больше 1.}
+\textbf{Теорема: } Следующие свойства ориентированного графа равносильны:
+\begin{enumerate}
+    \item Каждая сильно связная компонента состоит из одной вершины.
+    \item В графе нет циклов длины больше 1.
+    \item Вершины графа возможно занумеровать так, чтобы каждое ребро вело из вершины с меньшим номером в вершину с большим номером.
+\end{enumerate}
+
+\vskip 1em
+\noindent
+\textit{Доказательство:}
+Начнём с очевидных утверждений. Если в графе есть цикл с n > 1 вершинами, то вершины этого цикла сильно связаны (из любой можно попасть в любую по циклу), так что из первого свойства следует второе. Наоборот, если различные вершины a, b сильно связаны, то существуют пути из $a$ в $b$ и из $b$ в $a$,
+и из этих двух путей можно составить цикл. Наконец, если возможна нумерация
+вершин, при которой рёбра ведут от вершин с меньшим номером к вершинам с большим, то цикла нет: вдоль него номера вершин должны расти, и вернуться в начало мы не сможем. 
+Осталось доказать единственное нетривиальное утверждение: если в ориентированном графе нет циклов, то его вершины можно пронумеровать требуемым способом.
+
+\noindent
+\textbf{Лемма}. В ориентированном графе без циклов есть вершина, из которой не выходит ни одного ребра.
+
+\noindent
+\textit{Доказательство леммы:} Пусть это не так и из любой вершины выходит хоть одно ребро. Возьмём какую-то вершину $a_{1}$, из неё идёт ребро в какую-то другую вершину $a_{2}$, из неё идёт ребро ещё куда-то, и так далее. Поскольку граф конечен, то рано или поздно мы придём второй раз в какую-то вершину $a_{i}$, где уже были, и участок пути после $a_{i}$ свернётся в цикл - вопреки предположению, что циклов нет.
+
+\noindent
+Теперь можно закончить доказательство теоремы. Выберем вершину, из которой
+не ведёт ни одного ребра. Ей можно без опаски присвоить номер, больший всех
+остальных номеров. Поэтому рассуждаем по индукции: удалив эту вершину (и все
+входящие в неё рёбра) из графа, получим граф без циклов. (Циклы в нём были бы циклами и в исходном графе.) Пронумеруем его вершины от 1 до какого-то числа n (число оставшихся вершин) с соблюдением условия (рёбра ведут из меньшего к большему), и после этого вернём выброшенную вершину под номером n + 1. (Базис индукции — граф с одной вершиной — очевиден.)
+
+\noindent
+$\blacksquare$
+
+\parag{16. Критерий существования эйлерова цикла в неориентированном графе.}
+\textbf{Теорема:} Неориентированный граф без вершин нулевой степени содержит эйлеров цикл тогда и только тогда, когда он связен и степени всех вершин чётны.
+
+\vskip 1em
+\noindent
+\textit{Доказательство:} Пусть в графе эйлеров цикл есть. Тогда он проходит через все вершины (поскольку они имеют ненулевую степень), и по нему можно дойти от любой вершины до любой. Значит, граф связен. Теперь про степени. Возьмём какую-то вершину v, пусть она встречается в цикле k раз. Идя по циклу, мы приходим в неё k раз и уходим k раз, значит, использовали
+k входящих и k исходящих рёбер. При этом, раз цикл эйлеров, других рёбер у этой вершины нет, так что в графе её степень равна 2k. Таким образом, в одну
+сторону критерий доказан.
+
+\noindent
+В обратную сторону. Будем рассматривать пути, которые не проходят дважды по одному ребру. (Таков, например, путь из одного ребра.) Выберем среди них самый длинный путь
+\[
+    a_{1} \rightarrow a_{2} \rightarrow a_{3} \rightarrow ... \rightarrow
+    a_{n-1} \rightarrow a_{n}
+\]
+и покажем, что он является искомым циклом, то есть что $a_{1} = a_{n}$ и что он содержит все рёбра. В самом деле, если он самый длинный, то добавить к нему ребро $a_{n} \rightarrow a_{n+1}$ уже нельзя, то есть все выходящие из an рёбра уже использованы. Это возможно, лишь если $a_{1} = a_{n}$. В самом деле, если вершина $a_{n}$ встречалась только внутри пути (пусть она входит k раз внутри пути и ещё раз в конце пути), то мы использовали k + 1 входящих рёбер и k выходящих, и больше выходящих нет. Это противоречит чётности степени.
+
+\noindent
+Итак, мы имеем цикл, и осталось доказать, что в него входят все рёбра. В самом деле, если во всех вершинах цикла использованы все рёбра, то из вершин этого цикла нельзя попасть в вершины, не принадлежащие циклу, то есть использованы все вершины (мы предполагаем, что граф связен или сильно связен) и, следовательно, все рёбра. С другой стороны, если из какой-то вершины $a_{i}$ выходит ребро $a_{i} \rightarrow v$,
+то путь можно удлинить до
+\[
+    a_{i} \rightarrow a_{i+1} \rightarrow ... \rightarrow a_{n} = a_{1} \rightarrow a_{2} \rightarrow ... \rightarrow a_{i} \rightarrow v
+\]
+вопреки нашему выбору (самого длинного пути). Аналогично можно получить противоречие и для входящего ребра $v \rightarrow a_{i}$, добавив его в начало. (А можно заметить, что если есть неиспользованное входящее ребро, то есть и неиспользованное выходящее.) Это рассуждение было для ориентированного случая, но в неориентированном всё аналогично. Теорема доказана.
+
+\noindent
+$\blacksquare$
+
+\parag{17.Критерий обратимости остатка (вычета) по модулю N.}
+\textbf{Теорема:} Число $a$ обратимо по модулю $p$, если $a$ и $p$ взаимно просты, то есть их наибольший общий делитель равен единице.
+
+\vskip 1em
+\noindent
+\textit{Доказательство:}
+
+1) Пусть НОД(a, p) = d, $d > 1$. Заметим, что $1 < d < p$, так как делитель не может быть больше самого числа.
+
+2) Раз d - наибольший общий делитель $a$ и $p$, то существуют $k_{1}, k_{2}$ такие что:
+\[ a = k_{1} \cdot d \]
+\[ p = k_{2} \cdot d \]
+
+3) Тогда $a \cdot k_{2}$ сравнимо с нулём по модулю p, т.к:
+\[
+    a \cdot k_{2} \equiv k_{1} \cdot k_{2} \cdot d \equiv k_{1} \cdot p \equiv 0\ (mod\ p)
+\]
+
+4) Обратимость числа $a$ значит, что $\exists a^{-1}$, такое что:
+\[
+    a \cdot a^{-1} \equiv 1\ (mod\ p)
+\]
+
+5) Кроме того, имеем: $a \cdot k_{2} \equiv 0\ (mod\ p)$. Домножим обе части уравнения в пункте 4 на $k_{2}$:
+\[
+    k_{2} \cdot a \cdot a^{-1} \equiv k_{2}\ (mod\ p)  
+\]
+
+6) Получаем:
+\[
+    0 \cdot a^{-1} \equiv k_{2}\ (mod\ p)
+\]
+\[
+    0 \equiv k_{2}\ (mod\ p)
+\]
+
+7) Получили противоречние. Следовательно, $\not\exists a^{-1}$, который удовлетворяет этим условиям, если $a$ и $p$ не взаимно просты. Тогда исходная теорема доказана по принципу контрапозиции.
+
+\vskip 1em
+\noindent
+$\blacksquare$
 
 \parag{18. Малая теорема Ферма.}
 \textbf{Теорема:} Если $p$ — простое число и $a$ — целое число, не делящееся на $p$, то $a^{p-1} \equiv 1\ (mod\ p)$.
